--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
+    "slugify": "^1.6.6",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
